// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AnimatedLink AnimatedLink 1`] = `
<a
  className="sc-bdVaJa jDdHMZ"
  href="/undefined"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  here
</a>
`;

exports[`Storyshots AnimatedLink CardHeader 1`] = `
<header
  className="sc-htpNat mcGtW"
>
  here
</header>
`;

exports[`Storyshots AnimatedLink PosterImage 1`] = `
<div
  className="sc-bwzfXH fmUeyT"
>
  here
</div>
`;

exports[`Storyshots Compact Video Link Dark bg 1`] = `
<section
  className="sc-chPdSV gtkdHC"
>
  <div
    className="sc-ifAKCX lcGsow"
  >
    <div
      className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
      width={
        Array [
          1,
          1,
          1,
          1,
          0.5,
          0.3333333333333333,
        ]
      }
    >
      <div>
        <div
          className="sc-EHOje cUjftw"
        >
          <div
            className="sc-bZQynM hHdFtZ"
          >
            <a
              className="sc-jzJRlG ioCwbZ"
              color="#fff"
              href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
              opacity={0.5}
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                className="sc-cSHVUG kVZMia"
              >
                <div
                  className="sc-EHOje cXsIeh"
                >
                  <img
                    alt="Play button"
                    className="sc-jTzLTM hTdtvM"
                    src="test-file-stub"
                  />
                </div>
                <p
                  className="sc-fjdhpX jbghdt"
                  color="#fff"
                  opacity={0.5}
                >
                  Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
                </p>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Compact Video Link Grey bg 1`] = `
<section
  className="sc-kgoBCf JSEKb"
>
  <div
    className="sc-ifAKCX lcGsow"
  >
    <div
      className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
      width={
        Array [
          1,
          1,
          1,
          1,
          0.5,
          0.3333333333333333,
        ]
      }
    >
      <div>
        <div
          className="sc-EHOje cUjftw"
        >
          <div
            className="sc-bZQynM hHdFtZ"
          >
            <a
              className="sc-jzJRlG ioCwbZ"
              color="#333333"
              href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
              opacity={1}
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                className="sc-cSHVUG kVZMia"
              >
                <div
                  className="sc-EHOje cXsIeh"
                >
                  <img
                    alt="Play button"
                    className="sc-jTzLTM hTdtvM"
                    src="test-file-stub"
                  />
                </div>
                <p
                  className="sc-fjdhpX hTLxIn"
                  color="#333333"
                  opacity={1}
                >
                  Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
                </p>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Compact Video Link Multiple components 1`] = `
<div
  className="sc-ifAKCX lcGsow"
>
  <div
    className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div>
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM hHdFtZ"
        >
          <a
            className="sc-jzJRlG ioCwbZ"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-cSHVUG kVZMia"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-jTzLTM hTdtvM"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-fjdhpX hTLxIn"
                color="#333333"
                opacity={1}
              >
                Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div>
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM hHdFtZ"
        >
          <a
            className="sc-jzJRlG ioCwbZ"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-cSHVUG kVZMia"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-jTzLTM hTdtvM"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-fjdhpX hTLxIn"
                color="#333333"
                opacity={1}
              >
                Some smaller title
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div>
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM hHdFtZ"
        >
          <a
            className="sc-jzJRlG ioCwbZ"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-cSHVUG kVZMia"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-jTzLTM hTdtvM"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-fjdhpX hTLxIn"
                color="#333333"
                opacity={1}
              >
                Some smaller title
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Compact Video Link Single component 1`] = `
<div
  className="sc-ifAKCX lcGsow"
>
  <div
    className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div>
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM hHdFtZ"
        >
          <a
            className="sc-jzJRlG ioCwbZ"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-cSHVUG kVZMia"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-jTzLTM hTdtvM"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-fjdhpX hTLxIn"
                color="#333333"
                opacity={1}
              >
                Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CookieBanner CookieBanner 1`] = `
<div
  className="sc-kGXeez emiswm"
>
  <p
    className="sc-kpOJdX bfqzRn"
  >
    By continuing to use our site you agree to the use of cookies in accordance with our
     
    <a
      className="sc-ckVGcZ kYmQbD"
      href="/cookie-policy"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Cookie
    </a>
    ,
     
    <a
      className="sc-ckVGcZ kYmQbD"
      href="/privacy-policy"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Privacy
    </a>
     and
     
    <a
      className="sc-ckVGcZ kYmQbD"
      href="/data-retention-policy"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Data-retention
    </a>
     
    policies.
  </p>
  <button
    className="sc-dxgOiQ frUlkP"
  >
    I agree
  </button>
</div>
`;

exports[`Storyshots Form Button 1`] = `
<button
  className="sc-kEYyzF idKjMa"
>
  Click Me
</button>
`;

exports[`Storyshots Form Checkbox 1`] = `
<section
  className="sc-iAyFgw dPNDpn"
>
  <input
    className="sc-jKJlTe kdMWuV"
    id="checkbox"
    name="checkbox"
    type="checkbox"
  />
  <label
    htmlFor="checkbox"
  >
    Label
  </label>
</section>
`;

exports[`Storyshots Form Field 1`] = `
<section
  className="sc-kkGfuU ctTVkZ"
>
  <input
    className="sc-eNQAEJ fUgpmZ"
    placeholder="test"
    type="text"
  />
</section>
`;

exports[`Storyshots Form Fieldset 1`] = `
<section
  className="sc-iAyFgw dPNDpn"
>
  <input
    className="sc-eNQAEJ fUgpmZ"
    placeholder="test"
    type="text"
  />
</section>
`;

exports[`Storyshots Form Input 1`] = `
<input
  className="sc-eNQAEJ fUgpmZ"
  placeholder="test"
  type="text"
/>
`;

exports[`Storyshots Form Label 1`] = `
<label
  className="sc-hMqMXs bMyMmr"
>
  Label
</label>
`;

exports[`Storyshots Standalone Video Link Dark bg 1`] = `
<section
  className="sc-chPdSV gtkdHC"
>
  <div
    className="sc-ifAKCX lcGsow"
  >
    <div
      className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
      width={
        Array [
          1,
          1,
          1,
          1,
          0.5,
          0.3333333333333333,
        ]
      }
    >
      <div
        className="sc-kAzzGY hLHFQQ"
      >
        <div
          className="sc-EHOje cUjftw"
        >
          <div
            className="sc-bZQynM jmIaZk"
          >
            <a
              className="sc-jzJRlG ioCwbZ"
              color="#fff"
              href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
              opacity={0.5}
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                className="sc-cSHVUG kVZMia"
              >
                <div
                  className="sc-EHOje cXsIeh"
                >
                  <img
                    alt="Play button"
                    className="sc-jTzLTM hTdtvM"
                    src="test-file-stub"
                  />
                </div>
                <p
                  className="sc-fjdhpX jbghdt"
                  color="#fff"
                  opacity={0.5}
                >
                  Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
                </p>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Standalone Video Link Grey bg 1`] = `
<section
  className="sc-kgoBCf JSEKb"
>
  <div
    className="sc-ifAKCX lcGsow"
  >
    <div
      className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
      width={
        Array [
          1,
          1,
          1,
          1,
          0.5,
          0.3333333333333333,
        ]
      }
    >
      <div
        className="sc-kAzzGY hLHFQQ"
      >
        <div
          className="sc-EHOje cUjftw"
        >
          <div
            className="sc-bZQynM jmIaZk"
          >
            <a
              className="sc-jzJRlG ioCwbZ"
              color="#333333"
              href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
              opacity={1}
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                className="sc-cSHVUG kVZMia"
              >
                <div
                  className="sc-EHOje cXsIeh"
                >
                  <img
                    alt="Play button"
                    className="sc-jTzLTM hTdtvM"
                    src="test-file-stub"
                  />
                </div>
                <p
                  className="sc-fjdhpX hTLxIn"
                  color="#333333"
                  opacity={1}
                >
                  Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
                </p>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Standalone Video Link Multiple components 1`] = `
<div
  className="sc-ifAKCX lcGsow"
>
  <div
    className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-kAzzGY hLHFQQ"
    >
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM jmIaZk"
        >
          <a
            className="sc-jzJRlG ioCwbZ"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-cSHVUG kVZMia"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-jTzLTM hTdtvM"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-fjdhpX hTLxIn"
                color="#333333"
                opacity={1}
              >
                Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-kAzzGY hLHFQQ"
    >
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM jmIaZk"
        >
          <a
            className="sc-jzJRlG ioCwbZ"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-cSHVUG kVZMia"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-jTzLTM hTdtvM"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-fjdhpX hTLxIn"
                color="#333333"
                opacity={1}
              >
                Some smaller title
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-kAzzGY hLHFQQ"
    >
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM jmIaZk"
        >
          <a
            className="sc-jzJRlG ioCwbZ"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-cSHVUG kVZMia"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-jTzLTM hTdtvM"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-fjdhpX hTLxIn"
                color="#333333"
                opacity={1}
              >
                Some smaller title
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Standalone Video Link Single component 1`] = `
<div
  className="sc-ifAKCX lcGsow"
>
  <div
    className="sc-VigVT gnEyun sc-ifAKCX bTIbjp"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-kAzzGY hLHFQQ"
    >
      <div
        className="sc-EHOje cUjftw"
      >
        <div
          className="sc-bZQynM jmIaZk"
        >
          <a
            className="sc-jzJRlG ioCwbZ"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-cSHVUG kVZMia"
            >
              <div
                className="sc-EHOje cXsIeh"
              >
                <img
                  alt="Play button"
                  className="sc-jTzLTM hTdtvM"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-fjdhpX hTLxIn"
                color="#333333"
                opacity={1}
              >
                Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Typography BodyPrimary 1`] = `
<p
  className="sc-gqjmRU ewbdOb"
>
  BodyPrimary
</p>
`;

exports[`Storyshots Typography BodyPrimary muted 1`] = `
<p
  className="sc-gqjmRU gccgIt"
  muted={true}
>
  BodyPrimary muted
</p>
`;

exports[`Storyshots Typography BodyPrimary noPadding 1`] = `
<p
  className="sc-gqjmRU bndKCI"
>
  BodyPrimary without padding
</p>
`;

exports[`Storyshots Typography BodyPrimary reverse 1`] = `
<p
  className="sc-gqjmRU dgTeFt"
>
  BodyPrimary reverse
</p>
`;

exports[`Storyshots Typography BodyPrimary secondary text color 1`] = `
<p
  className="sc-gqjmRU bGZlRT"
>
  BodyPrimary secondary text color
</p>
`;

exports[`Storyshots Typography BodyPrimary textLight 1`] = `
<p
  className="sc-gqjmRU dnOtvo"
>
  BodyPrimary textLight
</p>
`;

exports[`Storyshots Typography BodyStylised 1`] = `
<p
  className="sc-gZMcBi dqQpFk"
>
  BodyStylised
</p>
`;

exports[`Storyshots Typography BodyStylised muted 1`] = `
<p
  className="sc-gZMcBi hWsGll"
  muted={true}
>
  BodyStylised muted
</p>
`;

exports[`Storyshots Typography BodyStylised noPadding 1`] = `
<p
  className="sc-gZMcBi drmZpQ"
>
  BodyStylised without padding
</p>
`;

exports[`Storyshots Typography BodyStylised reverse 1`] = `
<p
  className="sc-gZMcBi cSVRYM"
>
  BodyStylised reverse
</p>
`;

exports[`Storyshots Typography BodyStylised secondary text color 1`] = `
<p
  className="sc-gZMcBi jToOyE"
>
  BodyStylised secondary text color
</p>
`;

exports[`Storyshots Typography BodyStylised textLight 1`] = `
<p
  className="sc-gZMcBi dooHjB"
>
  BodyStylised textLight
</p>
`;

exports[`Storyshots Typography CardTitle 1`] = `
<h3
  className="sc-dnqmqq BbvWD"
>
  Display Title
</h3>
`;

exports[`Storyshots Typography CardTitle muted 1`] = `
<h3
  className="sc-dnqmqq eNEUaL"
  muted={true}
>
  Card Title muted
</h3>
`;

exports[`Storyshots Typography CardTitle noPadding 1`] = `
<h3
  className="sc-dnqmqq emzJLt"
>
  Card Title without padding
</h3>
`;

exports[`Storyshots Typography CardTitle reverse 1`] = `
<h3
  className="sc-dnqmqq dIepBG"
>
  Card Title reverse
</h3>
`;

exports[`Storyshots Typography CardTitle secondary text color 1`] = `
<h3
  className="sc-dnqmqq hZTrYl"
>
  Card Title secondary text color
</h3>
`;

exports[`Storyshots Typography CardTitle textLight 1`] = `
<h3
  className="sc-dnqmqq jloQJZ"
>
  Card Title textLight
</h3>
`;

exports[`Storyshots Typography DisplayTitle 1`] = `
<h2
  className="sc-htoDjs kxmtHS"
>
  Display Title
</h2>
`;

exports[`Storyshots Typography DisplayTitle muted 1`] = `
<h2
  className="sc-htoDjs jfNtmJ"
  muted={true}
>
  Display Title muted
</h2>
`;

exports[`Storyshots Typography DisplayTitle noPadding 1`] = `
<h2
  className="sc-htoDjs dRHNGK"
>
  Display Title without padding
</h2>
`;

exports[`Storyshots Typography DisplayTitle reverse 1`] = `
<h2
  className="sc-htoDjs hraXzN"
>
  Display Title reverse
</h2>
`;

exports[`Storyshots Typography DisplayTitle secondary text color 1`] = `
<h2
  className="sc-htoDjs hZgSYX"
>
  Display Title secondary text color
</h2>
`;

exports[`Storyshots Typography DisplayTitle textLight 1`] = `
<h2
  className="sc-htoDjs wOyLt"
>
  Display Title textLight
</h2>
`;

exports[`Storyshots Typography SectionTitle 1`] = `
<h2
  className="sc-gzVnrw gForec"
>
  Section Title
</h2>
`;

exports[`Storyshots Typography SectionTitle muted 1`] = `
<h2
  className="sc-gzVnrw fhweBi"
  muted={true}
>
  Section Title muted
</h2>
`;

exports[`Storyshots Typography SectionTitle noPadding 1`] = `
<h2
  className="sc-gzVnrw eiKAfC"
>
  Section Title without padding
</h2>
`;

exports[`Storyshots Typography SectionTitle reverse 1`] = `
<h2
  className="sc-gzVnrw kfMiWA"
>
  Section Title reverse
</h2>
`;

exports[`Storyshots Typography SectionTitle secondary text color 1`] = `
<h2
  className="sc-gzVnrw gAJaHT"
>
  Section Title secondary text color
</h2>
`;

exports[`Storyshots Typography SectionTitle textLight 1`] = `
<h2
  className="sc-gzVnrw dpdkgv"
>
  Section Title textLight
</h2>
`;

exports[`Storyshots Typography Subtitle 1`] = `
<h4
  className="sc-iwsKbI bpHRdi"
>
  Subtitle
</h4>
`;

exports[`Storyshots Typography Subtitle muted 1`] = `
<h4
  className="sc-iwsKbI eEBOyF"
  muted={true}
>
  Subtitle muted
</h4>
`;

exports[`Storyshots Typography Subtitle noPadding 1`] = `
<h4
  className="sc-iwsKbI fDauwh"
>
  Subtitle without padding
</h4>
`;

exports[`Storyshots Typography Subtitle reverse 1`] = `
<h4
  className="sc-iwsKbI kgFENl"
>
  Subtitle reverse
</h4>
`;

exports[`Storyshots Typography Subtitle secondary text color 1`] = `
<h4
  className="sc-iwsKbI jxyNIB"
>
  Subtitle secondary text color
</h4>
`;

exports[`Storyshots Typography Subtitle textLight 1`] = `
<h4
  className="sc-iwsKbI dBzMmU"
>
  Subtitle textLight
</h4>
`;
